# podcast-summarizer-mcp

./: .gitignore  LICENSE  README.md  TEST_PLAN.md  dogfood.md  mcp_idle_watchdog.py  pyproject.toml  server.py  start_server.sh
prompts/: README.md  interview.md  investment-podcast.md  news-briefing.md  technical-talk.md
tests/: conftest.py  test_gemini_client.py  test_state.py  test_youtube_client.py
tests/integration/: conftest.py  test_analyze_real.py  test_resolve_real.py  test_rss_real.py  test_search_real.py  test_ytdlp_real.py
tests/openclaw/: conftest.py  setup_profile.py  test_lookup_only.py  test_removal_and_list.py  test_search_clear_queries.py  test_search_vague_queries.py  test_smoke.py  test_video_summary.py
tests/unit/: test_channel_registry.py  test_channel_search.py  test_discovery.py  test_existing_youtube_client.py  test_gemini_client.py  test_prompt_override.py  test_rss_discovery.py  test_state.py  test_video_summary.py  test_ytdlp_metadata.py
tests/unit/fixtures/: rss_empty_feed.xml  rss_sample_feed.xml
tools/: channel_registry.py  channel_search.py  discovery.py  gemini_client.py  jobs.py  models.py  rss_discovery.py  state.py  youtube_client.py  ytdlp_metadata.py
