[project]
name = "video-summarizer-mcp"
version = "0.2.0"
description = "MCP server for YouTube video discovery + Gemini-powered video analysis. Zero YouTube API key required."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
# Legacy YouTube Data API path (opt-in fallback for cloud-VPS users hitting bot-checks)
youtube-api = [
    "google-api-python-client>=2.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "expensive: integration / E2E tests that hit real APIs and cost money (skipped unless RUN_EXPENSIVE_TESTS=1)",
    "openclaw: tests that require an OpenClaw test profile to be configured",
]
