[project]
name = "podcast-summarizer-mcp"
version = "0.3.0"
description = "MCP server for natural-language YouTube channel discovery + Gemini-powered video summaries. Zero YouTube API key required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "youtube", "gemini", "summarization", "claude", "anthropic"]
authors = [{ name = "Kai Ding" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
# Installs as `podcast-summarizer-mcp` on PATH after `pip install` / `uvx install`.
# This is what MCP host configs (Claude Desktop, Claude Code, OpenClaw) point at.
podcast-summarizer-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/kaiding-ucb/podcast-summarizer-mcp"
Repository = "https://github.com/kaiding-ucb/podcast-summarizer-mcp"
Issues = "https://github.com/kaiding-ucb/podcast-summarizer-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the top-level server module (the console-script entry point lives
# here), the tools package, and the example prompt library as data.
only-include = ["server.py", "tools", "prompts"]
sources = ["."]

[tool.hatch.build.targets.sdist]
# Same as wheel + dev-only files so contributors can run the test
# suite without re-cloning.
only-include = [
    "server.py",
    "tools",
    "prompts",
    "tests",
    "start_server.sh",
    "README.md",
    "LICENSE",
    "TEST_PLAN.md",
    "dogfood.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "expensive: integration / E2E tests that hit real APIs and cost money (skipped unless RUN_EXPENSIVE_TESTS=1)",
    "openclaw: tests that require an OpenClaw test profile to be configured",
]
